--- a/tugas pertemuan 7/src/index.html
+++ b/tugas pertemuan 7/src/index.html
@@ -7,42 +7,54 @@
     <link rel="stylesheet" href="./output.css">
 </head>
 <body>
-    <div class="container p-7">
-        <h1 class="text-2xl text-black font-bold text-indigo-600">Aplikasi Buku Favorit</h1>
-        <div class="mt-5 w-auto max-w-md border-2 p-4 rounded-lg">
-            <div class="sm:col-span-4">
-              <label for="name" class="block text-sm/6 font-medium text-gray-900 mb-2">Username</label>
-                <div class="flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 sm:max-w-md">
-                  <input type="text" id="namaPengguna" class="block flex-1 rounded-md border-0 bg-transparent py-1.5 pl-3.5 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm/6" placeholder="Masukan nama kamu">
-                </div>
-                <div class="mt-5 justify-start">
-                    <button type="submit" class="rounded-md bg-indigo-600 px-9 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Simpan Nama</button>
-                  </div>
+  <div class="container mx-auto p-7 flex">
+     <div class="w-full max-w-md p-7">
+        <h1 class="text-2xl text-indigo-600 font-bold">Aplikasi Buku Favorit</h1>
+        <div class="mt-5 border-2 p-4 rounded-lg">
+            <label for="namaPengguna" class="block text-sm font-medium text-gray-900 mb-2">Username</label>
+            <div class="flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-indigo-600">
+                <input type="text" id="namaPengguna" class="flex-1 rounded-md border-0 bg-transparent py-1.5 pl-3.5 text-gray-900 placeholder:text-gray-400 focus:ring-0 text-sm" placeholder="Masukan nama kamu">
             </div>
-        </div>
-        <div class="mt-7 w-auto max-w-md border-2 p-4 rounded-lg">
-            <div class="sm:col-span-4">
-                <label for="name" class="block text-sm/6 font-medium text-gray-900 mb-2">Judul Buku</label>
-                <div class="flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 sm:max-w-md">
-                  <input type="text" id="username" class="block flex-1 rounded-md border-0 bg-transparent py-1.5 pl-3.5 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm/6" placeholder="Masukan judul buku">
-                </div>
-              <div class="mt-3">
-                <label for="name" class="block text-sm/6 font-medium text-gray-900 mb-2">Penulis Buku</label>
-                <div class="flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 sm:max-w-md">
-                  <input type="text" id="username" class="block flex-1 rounded-md border-0 bg-transparent py-1.5 pl-3.5 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm/6" placeholder="Masukan nama penulis buku">
-                </div>
-              </div>
-              <div class="mt-3">
-                <label for="name" class="block text-sm/6 font-medium text-gray-900 mb-2">Tahun Terbuit Buku</label>
-                <div class="flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 sm:max-w-md">
-                  <input type="text" id="username" class="block flex-1 rounded-md border-0 bg-transparent py-1.5 pl-3.5 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm/6" placeholder="Masukan tahun terbit buku">
-                </div>
-              </div>
-                <div class="mt-5 justify-start">
-                    <button type="submit" class="rounded-md bg-indigo-600 px-9 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Tambah buku</button>
-                </div>
+            <div class="mt-5">
+                <button type="button" id="btnSimpanNama" class="rounded-md bg-indigo-600 px-9 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus:outline focus:outline-2 focus:outline-offset-2 focus:outline-indigo-600">Simpan Nama</button>
             </div>
+            <div id="salamPengguna" class="mt-5 text-lg font-semibold text-indigo-700"></div>
         </div>
-    </div>    
+
+        <form id="form-tambah-buku" class="mt-7 border-2 p-4 rounded-lg">
+            <label for="judul" class="block text-sm font-medium text-gray-900 mb-2">Judul Buku</label>
+            <div class="flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-indigo-600">
+                <input type="text" id="judul" class="flex-1 rounded-md border-0 bg-transparent py-1.5 pl-3.5 text-gray-900 placeholder:text-gray-400 focus:ring-0 text-sm" placeholder="Masukan judul buku">
+            </div>
+
+            <label for="penulis" class="block mt-3 text-sm font-medium text-gray-900 mb-2">Penulis Buku</label>
+            <div class="flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-indigo-600">
+                <input type="text" id="penulis" class="flex-1 rounded-md border-0 bg-transparent py-1.5 pl-3.5 text-gray-900 placeholder:text-gray-400 focus:ring-0 text-sm" placeholder="Masukan nama penulis buku">
+            </div>
+
+            <label for="tahun" class="block mt-3 text-sm font-medium text-gray-900 mb-2">Tahun Terbit Buku</label>
+            <div class="flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-indigo-600">
+                <input type="text" id="tahun" class="flex-1 rounded-md border-0 bg-transparent py-1.5 pl-3.5 text-gray-900 placeholder:text-gray-400 focus:ring-0 text-sm" placeholder="Masukan tahun terbit buku">
+            </div>
+
+            <div class="mt-5">
+                <button type="submit" class="rounded-md bg-indigo-600 px-9 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus:outline focus:outline-2 focus:outline-offset-2 focus:outline-indigo-600">Tambah Buku</button>
+            </div>
+        </form>
+    </div>
+
+    <div class="ml-10 w-full max-w-md p-7">
+      <div class="border-2 rounded-lg p-6 mb-8">
+        <h2 class="text-2xl font-semibold text-indigo-600 mb-4">Daftar Buku</h2>
+        <div id="daftar-buku" class="space-y-4"></div>
+      </div>
+      <div class="border-2 rounded-lg p-6">
+        <h2 class="text-2xl font-semibold text-indigo-600 mb-4">Buku Favorit</h2>
+        <div id="buku-favorit" class="space-y-4"></div>
+      </div>
+    </div>
+  </div>    
+
+  <script src="main.js"></script>
 </body>
 </html>
