--- a/tugas pertemuan 9/tailwind-layout/src/index.html
+++ b/tugas pertemuan 9/tailwind-layout/src/index.html
@@ -24,7 +24,7 @@
             <section class="container mx-auto px-4">
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
                 <!-- Card 1 -->
-                <div class="bg-white dark:bg-red-800 rounded-lg shadow-md overflow-hidden">
+                <div class="bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden">
                     <img src="../img/6c0da1f8805d1028b95b933f17f456b7.jpg" alt="Foto 1" class="w-full h-48 object-cover">
                     <div class="p-4">
                     <h3 class="text-xl font-semibold mb-2">Judul Foto 1</h3>
